Delete Duplicate Folders in System