@@ -1,5 +1,3 @@
-// https://leetcode.com/problems/delete-duplicate-folders-in-system/discuss/1360768
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -11,7 +9,7 @@ import java.util.TreeMap;
 
 class Solution {
   public List<List<String>> deleteDuplicateFolder(List<List<String>> paths) {
-    TrieNode trie = new TrieNode();
+    TrieNode trie = new TrieNode(new TreeMap<>());
     for (List<String> path : paths) {
       addPath(trie, path);
     }
@@ -20,37 +18,36 @@ class Solution {
     Set<TrieNode> marked = new HashSet<>();
     dedup(seen, marked, trie);
 
-    List<List<String>> remaining = new ArrayList<>();
-    search(remaining, marked, trie, new ArrayList<>());
+    List<List<String>> rest = new ArrayList<>();
+    search(rest, marked, trie, new ArrayList<>());
 
-    return remaining;
+    return rest;
   }
 
-  void search(
-      List<List<String>> remaining, Set<TrieNode> marked, TrieNode node, List<String> path) {
+  void search(List<List<String>> rest, Set<TrieNode> marked, TrieNode node, List<String> path) {
     if (!marked.contains(node)) {
       if (!path.isEmpty()) {
-        remaining.add(List.copyOf(path));
+        rest.add(List.copyOf(path));
       }
 
-      for (String folder : node.folderToChild.keySet()) {
+      for (String folder : node.folderToChild().keySet()) {
         path.add(folder);
-        search(remaining, marked, node.folderToChild.get(folder), path);
-        path.remove(path.size() - 1);
+        search(rest, marked, node.folderToChild().get(folder), path);
+        path.removeLast();
       }
     }
   }
 
   String dedup(Map<String, TrieNode> seen, Set<TrieNode> marked, TrieNode node) {
     StringBuilder sb = new StringBuilder("(");
-    for (String folder : node.folderToChild.keySet()) {
-      sb.append(folder).append(dedup(seen, marked, node.folderToChild.get(folder)));
+    for (String folder : node.folderToChild().keySet()) {
+      sb.append(folder).append(dedup(seen, marked, node.folderToChild().get(folder)));
     }
     sb.append(')');
 
     String result = sb.toString();
 
-    if (!node.folderToChild.isEmpty()) {
+    if (!node.folderToChild().isEmpty()) {
       if (seen.containsKey(result)) {
         marked.add(seen.get(result));
         marked.add(node);
@@ -65,15 +62,10 @@ class Solution {
   void addPath(TrieNode trie, List<String> path) {
     TrieNode node = trie;
     for (String folder : path) {
-      if (!node.folderToChild.containsKey(folder)) {
-        node.folderToChild.put(folder, new TrieNode());
-      }
-
-      node = node.folderToChild.get(folder);
+      node.folderToChild().putIfAbsent(folder, new TrieNode(new TreeMap<>()));
+      node = node.folderToChild().get(folder);
     }
   }
 }
 
-class TrieNode {
-  SortedMap<String, TrieNode> folderToChild = new TreeMap<>();
-}
+record TrieNode(SortedMap<String, TrieNode> folderToChild) {}
